@@ -1,1 +1,4 @@
 # invoiceApp
+
+java --module-path /Users/hubertstruminski/Desktop/javafx-sdk-11.0.2/lib --add-modules javafx.media,javafx.swing,javafx.fxml,javafx.controls,javafx.graphics,javafx.web,javafx.base -cp invoiceApp.jar com.hubertstruminski.invoice.app.InvoiceAppApplication
+
